--- a/_contact.sass
+++ b/_contact.sass
@@ -53,18 +53,20 @@
             color: #c3c3c3
             font-size: 1.175rem
             font-weight: 700
-    @media screen and (max-width: 576px)
-
+    @media screen and (max-width: 768px)
+        .box
+            height: 60px
         .msgbox
-            height: 200px
-            margin-bottom: 20px
+            height: 180px
+            margin-bottom: 14px
         .btn
-            margin-top: 25px
+            margin-top: 20px
             
         .box
             margin-bottom: 25px
         input
-            padding: 20px
-
+            padding: 15px
+    // @media (min-width: 577px) and (max-width: 768px)
+        
 
     
