--- a/_header.sass
+++ b/_header.sass
@@ -1,68 +1,63 @@
 header
-    
-    .menu
-        display: flex
-        justify-content: space-between
-        align-items: center
-        padding: 10px 0
-        height: 70px
-        background-color: #212529 
-        position: fixed
-        right: 0
-        left: 0
-        z-index: 1
+    position: fixed
+    z-index: 2
+    width: 100%
+    padding: 5px 0
+    background-color: #212529
+
+    .imgbox
+        width: 140px
+        height: 20px
+        img
+            cursor: pointer
+
+    nav
+        a
+            font-size: 18px
+            color: #e4d9d9
+            margin-right: 30px
+            cursor: pointer
+
+@media ( max-width: 990px )
+    header
+        padding: 20px 0
         .imgbox
-            width: 140px
-            margin-left: 120px
-        .btn
-            color: #ffff
             display: flex
+            align-items: start
+
+        .btn
+            border-radius: 5px
+            font-size: 14px
+            color: #9999ad
+            margin: 0 0 0 50px
+            padding: 7px 11px
+            font-weight: 600
+            border: 1px solid #9999ad
+            display: flex
+            justify-content: between
             align-items: center
-            display: none
-            border: 1px solid #ffffffa5
-            padding: 2px
-            opacity: 0.6
-        
-            h5
-                cursor: pointer
-                font-weight: 700
-                font-size: 17px
-            .icon
-                margin-left: 7px
-                cursor: pointer
+            i
+                margin: 0 0 0 10px
         nav
-            margin-right: 120px
             a
-                font-size: 19px
-                margin: 0 20px
-                cursor: pointer
-                &:hover
-                    color: #ffcb11
-    @media screen and ( max-width: 576px )
-        .menu
-            height: 70px
-            .btn
-                margin-right: 10px
-                padding:  6px 10px
-        .imgbox
-                // display: flex
-                // justify-content: start
-            margin-left: 10px
-    @media screen ( min-width: 577px ) and ( max-width: 768px )
-        .menu
-            nav
                 display: none
-            .btn
-                display: flex
-                justify-content: end
-                
-            .imgbox
-                margin-left: 17px
-    
-    @media screen and ( max-width: 992px )
-        .menu
-            nav
-                margin-right: 55px
-                a
-                    margin: 0 10px
-            
+@media ( min-width: 850px ) and ( max-width: 999px )
+    header
+        padding: 25px 0
+        .btn
+            position: fixed
+            right: 130px
+
+@media ( min-width: 575px ) and ( max-width: 849px )
+    header
+        padding: 25px 0
+        .btn
+            position: fixed
+            right: 35px
+
+@media ( min-width: 300px ) and ( max-width: 574px )
+    header
+        padding: 25px 0
+        .btn
+            position: fixed
+            right: 10px
