--- a/_services.sass
+++ b/_services.sass
@@ -1,6 +1,7 @@
 #services
     padding: 96px 0
     .textbox
+        margin: auto
         padding-bottom: 50px
         width: 360px  
         h1
@@ -25,6 +26,7 @@
         display: flex
         justify-content: center
         .icon
+            margin: auto
             display: flex
             justify-content: center
             align-items: center
