--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -9,6 +9,7 @@
             font-weight: 700
             margin-bottom: 15px
         h3
+            margin-bottom: 64px
             font-size: 20px
             color: #828080
         h2
